2008-03-18  Tambet Ingo  <tambet@gmail.com>

	Implement wired 802.1x authentication.

	* src/applet-device-wired.c (get_secrets_dialog_response_cb): Implement.
	(wired_get_secrets): Implement.

	* src/wired-dialog.[ch]: Implement.

	* src/Makefile.am: Add wired-dialog.[ch] to build.

2008-03-18  Dan Williams  <dcbw@redhat.com>

	* src/vpn-password-dialog.c
		- (nma_vpn_request_password): handle new GetSecrets return format

2008-03-18  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-upgrade.c
		- (try_convert_leap, nm_gconf_migrate_0_7_wireless_security): don't
			bother trying to convert already converted connections

2008-03-18  Dan Williams  <dcbw@redhat.com>

	* configure.ac
		- Convert check for iwlib into just check for wireless.h

	* src/wireless-helper.h
		- Stuff that's needed to include wireless.h

	* src/ap-menu-item.c
	  src/applet-device-wireless.c
	  src/applet.c
	  src/gconf-helpers/gconf-upgrade.c
	  src/utils/utils.c
		- Add missing includes, don't include iwlib.h

2008-03-17  Dan Williams  <dcbw@redhat.com>

	* src/applet-dialogs.c
		- (set_eap_info_label, info_dialog_update): handle spit-out 802.1x

	* src/gconf-helpers/gconf-upgrade.c
	  src/gconf-helpers/gconf-upgrade.h
		- (nm_gconf_read_0_6_eap_settings): copy to 802.1x, not wireless-security
		- (nm_gconf_read_0_6_leap_settings): fixup for new LEAP layout
		- (nm_gconf_read_0_6_wireless_connection): handle split-out 802.1x
		- (unset_ws_key, copy_stringlist_to_8021x, copy_string_to_8021x,
		   copy_bool_to_8021x): new functions
		- (try_convert_leap): convert a pre-split LEAP config
		- (copy_keyring_to_8021x): convert pre-split keyring items
		- (nm_gconf_migrate_0_7_wireless_security): split up wireless-security
			into 802.1x and wireless-security

	* src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-helpers.h
		- (nm_gconf_get_all_connections): update GConf for split 802.1x
		- (read_one_setting_value_from_gconf,
		   read_applet_private_values_from_gconf,